--- a/examples/AspNetCore/WebApi/OpenApiExample/OpenApiExample.csproj
+++ b/examples/AspNetCore/WebApi/OpenApiExample/OpenApiExample.csproj
@@ -7,6 +7,10 @@
  </PropertyGroup>
 
  <ItemGroup>
+  <PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="10.0.*">
+   <PrivateAssets>all</PrivateAssets>
+   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+  </PackageReference>
   <PackageReference Include="Scalar.AspNetCore" Version="2.12.*" />
   <PackageReference Include="Scalar.AspNetCore.Microsoft" Version="2.12.*" />
  </ItemGroup>
