--- a/examples/AspNetCore/OData/SomeODataOpenApiExample/Properties/launchSettings.json
+++ b/examples/AspNetCore/OData/SomeODataOpenApiExample/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "SomeODataOpenApiExample": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "scalar",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
